fixing bubbles on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -79,11 +79,10 @@ body {
     margin: 5px;
     background-color: rgb(255, 245, 231);
     color: rgb(15, 15, 15);
-    height: 100vh;
+    /* height: 100vh; */
     width: 95vw;
 
     font-family: var(--bodyFont);
-    z-index: -3;
 } 
 
 img {
@@ -106,6 +105,7 @@ i, a {
     top: 0;
     left: 0;
     padding-left: 3%;
+    z-index: 200;
 
 }
 .navText {
@@ -137,6 +137,7 @@ i, a {
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 200;
 
 }
 .footLeft, .footRight, .footCenter {
@@ -177,7 +178,11 @@ i, a {
     margin: 0 1.1em;
     padding: 0;
     border-radius: 50%;
+    z-index: 4;
     /* padding: 20px 20px 20px 20px; */
+}
+.btnRound:hover {
+  cursor: pointer;
 }
 .btnRound > a {
   color: white;
@@ -191,7 +196,7 @@ i, a {
   padding: 14px;
   display: flex;
   flex-flow: row;
-  z-index: -1;
+  z-index: 40;
 }
 .heroTextTop {
   min-height: 100px;
@@ -241,6 +246,19 @@ i, a {
 .heroImg {
   width: 350px;
   height: 350px;
+}
+.footLeft > a {
+  text-decoration: underline;
+}
+.heroAbout {
+  position: absolute;
+  top: 20vh;
+  width: 95vw;
+  margin: 8px;
+  padding: 14px;
+  display: flex;
+  flex-direction: column;
+  z-index: -1;
 }
 
 @media screen and (max-width: 1100px){
@@ -390,7 +408,7 @@ i, a {
     width: 40%;
   }
   .btn {
-    margin-top: 2px;
+    /* margin-top: 2px; */
     font-size: .6em;
     width: 80px;
   }
@@ -417,11 +435,21 @@ i, a {
   img {
     min-width: 250px;
   }
-  .btn {
-    margin-left: 30px;
-  }
+  
   .foot {
     font-size: .8em;
+    padding-top: 5px
+  }
+  .footCenter > a {
+    font-size: .15em;
+    margin-top: 2px;
+  }
+  .btn {
+    width: 79px;
+  }
+  .footRight {
+    display: flex;
+    flex-direction: column;
   }
 }
 @media screen and (max-width: 380px) {
